Update according to AngularJS style and best practices.

--- a/selector.html
+++ b/selector.html
@@ -14,7 +14,7 @@
   </div>
 
   <div class="control-group inline-block">
-    <div data-modal-selector="showSelectorModal"
+    <div data-selector-modal="showSelectorModal"
       data-modal-title="modalTitle"
       data-items="items" data-item-type="itemType">
       <ul class="unstyled item">
