--- a/selector.html
+++ b/selector.html
@@ -13,7 +13,7 @@
     </div>
   </div>
 
-  <div stackable="showSelectorModal" stackable-modal="true">
+  <stackable-modal stackable="showSelectorModal">
     <div data-selector-modal="showSelectorModal"
       data-modal-title="modalTitle"
       data-items="items" data-item-type="itemType">
@@ -30,5 +30,5 @@
       </div>
       <div style="clear:both"></div>
     </div>
-  </div>
+  </stackable-modal>
 </div>
