--- a/selector.html
+++ b/selector.html
@@ -1,15 +1,15 @@
 <div>
   <div class="well">
-    <div data-ng-hide="fixed" class="pull-right">
+    <div ng-hide="fixed" class="pull-right">
       <button class="btn btn-success btn-change"
-        data-ng-show="items.length > 0"
-        data-ng-click="showSelectorModal=true"><i class="icon-list"></i> Change</button>
-      <button data-ng-show="items.length == 0" class="btn btn-success btn-add"
-        data-ng-click="addItem()"><i class="icon-plus"></i> Add {{itemType}}</button>
+        ng-show="items.length > 0"
+        ng-click="showSelectorModal=true"><i class="icon-list"></i> Change</button>
+      <button ng-show="items.length == 0" class="btn btn-success btn-add"
+        ng-click="addItem()"><i class="icon-plus"></i> Add {{itemType}}</button>
     </div>
-    <div data-ng-show="selected == null">None found.</div>
-    <div data-ng-show="selected != null">
-      <div data-ng-transclude></div>
+    <div ng-show="selected == null">None found.</div>
+    <div ng-show="selected != null">
+      <div ng-transclude></div>
     </div>
   </div>
 
@@ -18,15 +18,16 @@
       data-modal-title="modalTitle"
       data-items="items" data-item-type="itemType">
       <ul class="unstyled item">
-        <li class="item-hover well" data-ng-repeat="selected in ((!custom && items) || []) | orderBy:'label'"
-          data-ng-click="select(selected)">
-          <div data-ng-show="!custom" data-ng-transclude></div>
+        <li class="item-hover well"
+          ng-repeat="selected in ((!custom && items) || []) | orderBy:'label'"
+          ng-click="select(selected)">
+          <div ng-show="!custom" ng-transclude></div>
         </li>
       </ul>
-      <div data-ng-show="custom" data-ng-transclude></div>
+      <div ng-show="custom" ng-transclude></div>
       <div class="pull-right">
         <button class="btn btn-success btn-add"
-          data-ng-click="addItem()"><i class="icon-plus"></i> Add {{itemType}}</button>
+          ng-click="addItem()"><i class="icon-plus"></i> Add {{itemType}}</button>
       </div>
       <div style="clear:both"></div>
     </div>
