Update to bootstrap 3.2.

--- a/selector.html
+++ b/selector.html
@@ -17,7 +17,7 @@
     <div data-selector-modal="showSelectorModal"
       data-modal-title="modalTitle"
       data-items="items" data-item-type="itemType">
-      <ul class="unstyled item">
+      <ul class="list-unstyled item">
         <li class="item-hover well"
           ng-repeat="selected in ((!custom && items) || []) | orderBy:'label'"
           ng-click="select(selected)">
