--- a/selector.html
+++ b/selector.html
@@ -1,14 +1,16 @@
 <div>
   <div class="well">
-    <div ng-hide="fixed" class="pull-right">
-      <button class="btn btn-success btn-change"
-        ng-show="items.length > 0"
-        ng-click="showSelectorModal=true"><i class="fa fa-list"></i> Change</button>
-      <button ng-show="items.length == 0" class="btn btn-success"
-        ng-click="addItem()"><i class="fa fa-plus"></i> Add {{itemType}}</button>
+    <div ng-show="items.length == 0">
+      <button class="btn btn-success pull-right" ng-click="addItem()">
+        <span><i class="fa fa-plus"></i> Add {{itemType}}</span>
+      </button>
+      <p>None found.</p>
     </div>
-    <div ng-show="selected == null">None found.</div>
-    <div ng-show="selected != null">
+    <div ng-show="items.length > 0">
+      <button ng-hide="fixed" class="btn btn-success pull-right"
+        ng-click="showSelectorModal=true">
+        <span><i class="fa fa-list"></i> Change</span>
+      </button>
       <div ng-transclude></div>
     </div>
   </div>
