Use "br-" prefix for bedrock directives.

--- a/selector.html
+++ b/selector.html
@@ -16,9 +16,9 @@
   </div>
 
   <stackable-modal stackable="showSelectorModal">
-    <div data-selector-modal="showSelectorModal"
-      data-modal-title="modalTitle"
-      data-items="items" data-item-type="itemType">
+    <div br-selector-modal="showSelectorModal"
+      br-modal-title="modalTitle"
+      br-items="items" br-item-type="itemType">
       <ul ng-show="!custom" class="list-unstyled item br-selector-list"></ul>
       <div ng-show="custom" class="br-selector-transclude-custom"></div>
       <div class="pull-right">
