--- a/selector.html
+++ b/selector.html
@@ -1,17 +1,20 @@
 <div>
   <div class="well">
-    <div ng-show="items.length == 0">
-      <button class="btn btn-success pull-right" ng-click="addItem()">
+    <div ng-show="selecting">
+      <span>Selecting... <i class="fa fa-refresh fa-spin fa-lg text-muted"></i></span>
+    </div>
+    <div ng-hide="selecting">
+      <button ng-show="items.length <= 1"
+        class="btn btn-success pull-right" ng-click="addItem()">
         <span><i class="fa fa-plus"></i> Add {{itemType}}</span>
       </button>
-      <p>None found.</p>
-    </div>
-    <div ng-show="items.length > 0">
-      <button ng-hide="fixed" class="btn btn-success pull-right"
+      <button ng-show="!fixed && items.length > 1"
+        class="btn btn-success pull-right"
         ng-click="showSelectorModal=true">
         <span><i class="fa fa-list"></i> Change</span>
       </button>
-      <div ng-transclude></div>
+      <p ng-show="items.length == 0">None found.</p>
+      <div ng-show="items.length >= 1" ng-transclude></div>
     </div>
   </div>
 
@@ -21,6 +24,7 @@
       br-items="items" br-item-type="itemType">
       <ul ng-show="!custom" class="list-unstyled item br-selector-list"></ul>
       <div ng-show="custom" class="br-selector-transclude-custom"></div>
+      <hr ng-show="items.length <= 1 || (!fixed && items.length > 1)"/>
       <div class="pull-right">
         <button class="btn btn-success"
           ng-click="addItem()"><i class="fa fa-plus"></i> Add {{itemType}}</button>
