Add br-lazy-compiles to reduce upfront compilation.

--- a/selector.html
+++ b/selector.html
@@ -13,7 +13,7 @@
       <div ng-multi-transclude="br-selector-selected"></div>
     </div>
   </div>
-  <div br-lazy-compile="selector-modal" br-compile-trigger="model.showChoices">
+  <div br-lazy-compile="br-selector-modal" br-compile-trigger="model.showChoices">
     <stackable-modal stackable="model.showChoices">
       <div class="modal">
         <div class="modal-dialog">
