Change br-lazy-compile API.
- Provide compile trigger expression with br-lazy-compile=<expression>.
- Provide (now optional) the template cache ID with br-lazy-id=<id>.

--- a/selector.html
+++ b/selector.html
@@ -14,8 +14,7 @@
     </div>
   </div>
   <stackable-modal stackable="model.showChoices"
-    br-lazy-compile="br-selector-modal"
-    br-compile-trigger="model.showChoices">
+    br-lazy-compile="model.showChoices" br-lazy-id="br-selector-modal">
     <div class="modal">
       <div class="modal-dialog">
         <div class="modal-content">
