--- a/selector-component.html
+++ b/selector-component.html
@@ -1,10 +1,12 @@
 <div>
   <div class="well">
-    <button ng-show="$ctrl.onAddItem && ($ctrl.items.length <= 1 && !$ctrl.allowSelectNone || $ctrl.items.length < 1 && $ctrl.allowSelectNone)"
+    <button ng-show="$ctrl.onAddItem &&
+      ($ctrl.items.length < 1 || ($ctrl.items.length === 1 && !$ctrl.allowSelectNone))"
       class="btn btn-success pull-right" ng-click="$ctrl.onAddItem()">
       <span><i class="fa fa-plus"></i> Add {{$ctrl.itemType || 'Item'}}</span>
     </button>
-    <button ng-show="(!$ctrl.fixed && $ctrl.items.length > 1 && !$ctrl.allowSelectNone) || (!$ctrl.fixed && !$ctrl.fixed && $ctrl.items.length > 0 && $ctrl.allowSelectNone)"
+    <button ng-show="!$ctrl.fixed && ($ctrl.items.length > 1 ||
+      ($ctrl.items.length > 0 && $ctrl.allowSelectNone)"
       class="btn btn-success pull-right" ng-click="$ctrl.showChoices=true">
       <span><i class="fa fa-list"></i> Change</span>
     </button>
