--- a/selector-component.html
+++ b/selector-component.html
@@ -1,6 +1,6 @@
 <div>
   <div class="well">
-    <button ng-show="$ctrl.onAddItem &&
+    <button ng-show="$ctrl.onAddItem && !$ctrl.fixed &&
       ($ctrl.items.length < 1 || ($ctrl.items.length === 1 && !$ctrl.allowSelectNone))"
       class="btn btn-success pull-right" ng-click="$ctrl.onAddItem()">
       <span><i class="fa fa-plus"></i> Add {{$ctrl.itemType || 'Item'}}</span>
@@ -21,12 +21,12 @@
       <br-modal-body>
         <div ng-transclude="br-selector-choices"></div>
         <hr ng-show="$ctrl.items.length <= 1 || (!$ctrl.fixed && $ctrl.items.length > 1)"/>
-        <div ng-if="$ctrl.onAddItem" class="pull-right">
+        <div ng-if="$ctrl.onAddItem && !$ctrl.fixed" class="pull-right">
           <button class="btn btn-success" ng-click="$ctrl.onAddItem()">
             <i class="fa fa-plus"></i> Add {{$ctrl.itemType || 'Item'}}
           </button>
         </div>
-        <div ng-if="$ctrl.allowSelectNone && $ctrl.onSelect && $ctrl.selected" class="pull-left">
+        <div ng-if="$ctrl.allowSelectNone && !$ctrl.fixed && $ctrl.onSelect && $ctrl.selected" class="pull-left">
           <button class="btn btn-warning" ng-click="$ctrl.onSelect({selected: null})">
             Deselect {{$ctrl.itemType || 'Item'}}
           </button>
